; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/tsl2561/extr_tsl2561.c_tsl2561Enable.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/tsl2561/extr_tsl2561.c_tsl2561Enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_tsl2561Initialised = common dso_local global i32 0, align 4
@TSL2561_ERROR_NOINIT = common dso_local global i32 0, align 4
@TSL2561_COMMAND_BIT = common dso_local global i32 0, align 4
@TSL2561_REGISTER_CONTROL = common dso_local global i32 0, align 4
@TSL2561_CONTROL_POWERON = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tsl2561Enable() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @_tsl2561Initialised, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @TSL2561_ERROR_NOINIT, align 4
  store i32 %5, i32* %1, align 4
  br label %12

6:                                                ; preds = %0
  %7 = load i32, i32* @TSL2561_COMMAND_BIT, align 4
  %8 = load i32, i32* @TSL2561_REGISTER_CONTROL, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @TSL2561_CONTROL_POWERON, align 4
  %11 = call i32 @tsl2561Write8(i32 %9, i32 %10)
  store i32 %11, i32* %1, align 4
  br label %12

12:                                               ; preds = %6, %4
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @tsl2561Write8(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
